--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "brunch watch --server",
-    "test": "brunch test"
+    "test": "brunch test",
+    "deploy": "gh-pages -d public"
   },
   "dependencies": {
     "auto-reload-brunch": ">= 1.0 < 2.0",
